/**
 * Testing Stories:
 * -Renders a Module card, with icon received from props
 * -Drag feature works ( details TBD)
 */

import React from 'react'
import Module  from './Module'
import { mount, shallow } from 'enzyme'
// import { jsonResponseMock, emptyAPI } from './utils'



it('Module renders ', () => {
  expect(true).toBe(true);

});